--- a/index.html
+++ b/index.html
@@ -5341,6 +5341,7 @@ we're getting here posts, zero.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 299. example, add window.payyoffset (154) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image299.png"
+  loading="lazy"
   title="Example, Add window.pageYOffset"
   alt="Example, Add window.pageYOffset."
   style="width:50%" />
@@ -5355,11 +5356,13 @@ always get 200 pixels. Let's go ahead and give that a try.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 300/301. identify top of section (154) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image300.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Use pageYOffset to get top of viewport section"
   alt="Use pageYOffset to get top of viewport section." />
 <img class="border"
   src="./images/image301.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="console.log the post and pixels"
   alt="console.log the post and pixels." />
@@ -5375,6 +5378,7 @@ there. I always get 200 for that first post.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 302. round down using math.floor (155) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image302.png"
+  loading="lazy"
   title="Round down using Math.floor function"
   alt="Round down using Math.floor function."
   style="width:50%" />
@@ -5406,6 +5410,7 @@ will take this, round it down and then it gets pushed into postTops.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~ 303. assign posttops to each section array (156) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image303.png"
+  loading="lazy"
   title="Assign postTops to section array"
   alt="Assign postTops to section array."
   style="width:50%" />
@@ -5419,6 +5424,7 @@ here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 304. console log the section pixels (156) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image304.png"
+  loading="lazy"
   title="console.log the section pixels"
   alt="console.log the section pixels."
   style="width:50%" />
@@ -5437,6 +5443,7 @@ little bit different.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 305. add an event listener (2.24) (157) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image305.png"
+  loading="lazy"
   title="2.24 Add an Event Listener"
   alt="2.24 Add an Event Listener."
   style="width:40%" />
@@ -5448,6 +5455,7 @@ we know where they all are.</p>
 <!--~~~~~~~~~~~~~~~~~~~~ 306. load for each event listener section (157) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image306.png"
+  loading="lazy"
   title="Load event listener for each section array"
   alt="Load event listener for each section array."
   style="width:50%" />
@@ -5464,6 +5472,7 @@ function.</p>
 <!--~~~~~~~~~~~~~~~~~~~~ 307. window addeventlistener scroll function (158) ~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image307.png"
+  loading="lazy"
   title="window.addEventListener scroll function"
   alt="window.addEventListener scroll function."
   style="width:50%" />
@@ -5480,6 +5489,7 @@ version of the scroll event.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 308. window, on scroll, function (159) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image308.png"
+  loading="lazy"
   title="window, on scroll, run function"
   alt="window, on scroll, run function."
   style="width:50%" />
@@ -5495,6 +5505,7 @@ library to use it. That's nice.</p>
 <!--~~~~~~~~~~~~~~~~~~~~ 309. how far off top of windows is scrolled (159) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image309.png"
+  loading="lazy"
   style="width:50%"
   title="window.pageYOffset tracks how far off the top of the window is scrolled"
   alt="window.pageYOffset tracks how far off the top of the window is scrolled." />
@@ -5506,6 +5517,7 @@ tracks how far off the top of the window or page is scrolled.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 310. test with console.log, pagetop (161) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image310.png"
+  loading="lazy"
   style="width:50%"
   title="Use pageTop with console.log for pixels down the scroll is"
   alt="Use pageTop with console.log for pixels down the scroll is." />
@@ -5516,11 +5528,13 @@ those pixels change as we scroll down the page. Let's test that and see.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~ 311/312. test, scroll down capture pixels (161) ~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image311.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Capture entire page length in pixels"
   alt="Capture entire page length in pixels." />
 <img class="border"
   src="./images/image312.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Test, scroll down &amp; capture full length of web page"
   alt="Test, scroll down &amp; capture full length of web page." />
@@ -5538,6 +5552,7 @@ the entire window.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 313. capture section height in pixels (162) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image313.png"
+  loading="lazy"
   style="width:50%"
   title="Capture each section height in pixels"
   alt="Capture each section height in pixels." />
@@ -5558,6 +5573,7 @@ That strategy is exactly the same.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 314. understanding the options (163) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image314.png"
+  loading="lazy"
   style="width:50%"
   title="Understanding the options; scroll up or scroll down"
   alt="Understanding the options; scroll up or scroll down." />
@@ -5572,6 +5588,7 @@ the two conditions that we need to watch out for, while we're handling our scrol
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 315. the magic conditionals (2.25) (163) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image315.png"
+  loading="lazy"
   style="width:40%"
   title="2.25 The Magic Conditionals"
   alt="2.25 The Magic Conditionals." />
@@ -5582,6 +5599,7 @@ else if, just as I did in the jQuery version and I'm going to piece this in here
 <!--~~~~~~~~~~~~~~~~~~~~~ 316. find section using pagetop and offset (164) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image316.png"
+  loading="lazy"
   style="width:50%"
   title="Assign var pagetop = window.pageYOffset, then if else for each section break"
   alt="Assign var pagetop = window.pageYOffset, then if else for each section break." />
@@ -5611,6 +5629,7 @@ Should be doing it. There, I see what I did wrong.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 317. section break + 250 as scroll (165) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image317.png"
+  loading="lazy"
   style="width:50%"
   title="Scroll up/down for section break pixel count"
   alt="Scroll up/down for section break pixel count." />
@@ -5623,11 +5642,13 @@ says okay.</p>
 <!--~~~~~~~~~~~~~~~~ 318/319. test console, section identifier; 1 thru 5 (165) ~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image318.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Test console, scroll up/down, identify section"
   alt="Test console, scroll up/down, identify section." />
 <img class="border"
   src="./images/image319.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Test console, scrolling up/down, identify section"
   alt="Test console, scrolling up/down, identify section." />
@@ -5645,6 +5666,7 @@ page. Not for every single pixel that we scroll.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 320. example, changing the nav links (166) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image320.png"
+  loading="lazy"
   style="width:50%"
   title="Example, changing the nav links"
   alt="Example, changing the nav links." />
@@ -5659,6 +5681,7 @@ that everything has no class on it up there.</p>
 <!--~~~~~~~~~~~~~~~~~ 321. navlinks for each function remove attributes (167) ~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image321.png"
+  loading="lazy"
   style="width:50%"
   title="navLinks for each function remove attributes of css class"
   alt="navLinks for each function remove attributes of css class." />
@@ -5684,6 +5707,7 @@ semicolon there before we go.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 322. changing the next link (2.26) (168) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image322.png"
+  loading="lazy"
   style="width:40%"
   title="2.26 Changing the Next Link"
   alt="2.26 Changing the Next Link." />
@@ -5694,6 +5718,7 @@ correct link.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 323. thislink = selected nav link (168) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image323.png"
+  loading="lazy"
   style="width:50%"
   title="thisLink = document.querySelector nav link"
   alt="thisLink = document.querySelector nav link." />
@@ -5706,6 +5731,7 @@ tricky this querySelector, what we're going to use is <b>nav ul, li a</b>.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~ 324. line item, a href = first - fifth (169) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image324.png"
+  loading="lazy"
   style="width:50%"
   title="HTML line item, a href, first - fifth"
   alt="HTML line item, a href, first - fifth." />
@@ -5734,6 +5760,7 @@ element on the page, so we could have done it this way as well there.</p>
 <!--~~~~~~~~~~~~~~~ 325. thislink = queryselector, nav ul li:nth-child, a (170) ~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image325.png"
+  loading="lazy"
   style="width:50%"
   title="thisLink = querySelector, nav ul li:nth-child, a href"
   alt="thisLink = querySelector, nav ul li:nth-child, a href." />
@@ -5746,6 +5773,7 @@ will get me the correct link there.</p>
 <!--~~~~~~~~~~~~~~~~~~~~ 326. set this link's class name to selected (170) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image326.png"
+  loading="lazy"
   title="thisLink.className = 'selected'"
   alt="thisLink.className = 'selected'."
   style="width:50%;" />
@@ -5757,11 +5785,13 @@ assigned the same value as counter, because now we're ready to go into the next 
 <!--~~~~~~~~~~~~~~~~~~ 327/328. test console, highlight correct section (171) ~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image327.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Test console, highlight 4th section"
   alt="Test console, highlight 4th section." />
 <img class="border"
   src="./images/image328.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="Test console, highlight 5th section"
   alt="Test console, highlight 5th section." />
@@ -5785,6 +5815,7 @@ as well.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 329. 28-46 of script.js (172) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image329.png"
+  loading="lazy"
   title="Lines 28-46 of script.js"
   alt="Lines 28-46 of script.js."
   style="width:50%;" />
@@ -5807,6 +5838,8 @@ and one that works with plain Vanilla JavaScript.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 330. resizing function (2.27) (173) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image330.png"
+  loading="lazy"
+  title="2.27 Resizing Function"
   alt="2.27 Resizing Function."
   style="width:40%;" />
 
@@ -5818,6 +5851,8 @@ everything here.
 <!--~~~~~~~~~~~~~~~~~~~~~~ 331. add listener after scroll function (173) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image331.png"
+  loading="lazy"
+  title="Add event listener after the scroll function"
   alt="Add event listener after the scroll function."
   style="width:50%;" />
 
@@ -5833,6 +5868,7 @@ Window resize is semi code and we will put stuff in here.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 332. jquery, on resize function (174) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image332.png"
+  loading="lazy"
   title="jQuery, on resize function"
   alt="jQuery, on resize function."
   style="width:50%;" />
@@ -5844,6 +5880,7 @@ run a function. That's how we did it with jQuery.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~ 333. js, event listener, resize function (174) ~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image333.png"
+  loading="lazy"
   title="JS, event listener, resize function"
   alt="JS, event listener, resize function."
   style="width:50%;" />
@@ -5856,11 +5893,13 @@ jQuery is a little bit shorter but that's okay.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~ 334/335. doneresizing, settimeout function (175) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image334.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="doneResizing, setTimeout function"
   alt="doneResizing, setTimeout function." />
 <img class="border"
   src="./images/image335.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="doneResizing, setTimeout function"
   alt="doneResizing, setTimeout function." />
@@ -5875,6 +5914,7 @@ timeout.</p>
 <!--~~~~~~~~~~~~~~~~ 336. doneresizing, capture window, 1/2 second delay (175) ~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image336.png"
+  loading="lazy"
   title="doneResizing, capture window, half second delay"
   alt="doneResizing, capture window, half second delay."
   style="width:50%;" />
@@ -5891,6 +5931,7 @@ after we're done actually resizing the Window.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 337. function resetpageposition (176) ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image337.png"
+  loading="lazy"
   title="function resetPagePosition"
   alt="function resetPagePosition."
   style="width:50%;" />
@@ -5915,6 +5956,7 @@ the for the jQuery version.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 338. finalizing the script (2.28) (177) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image338.png"
+  loading="lazy"
   title="2.28 Finalizing the Script"
   alt="2.28 Finalizing the Script."
   style="width:40%;" />
@@ -5925,11 +5967,13 @@ this resetPagePosition function.</p>
 <!--~~~~~~~~~~~~~~~~~~~ 339/340. posts.foreach function post posttops (177) ~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image339.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="posts.forEach(function(post))"
   alt="posts.forEach(function(post))." />
 <img class="border"
   src="./images/image340.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="postTops.push empty array"
   alt="postTops.push empty array." />
@@ -5943,6 +5987,7 @@ empty.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 341. function resetpageposition (178) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image341.png"
+  loading="lazy"
   title="function resetPagePosition"
   alt="function resetPagePosition."
   style="width:50%;" />
@@ -5952,6 +5997,7 @@ there, at the top of that postTops. So, that makes sure that again, if
 I'm resizing my window and recapturing where the tops of each of those
 sections, is because they may have changed based on how wide the window
 is once I've finished resizing it.</p>
+
 <p>The next thing I want to do, is, create a variable called
 PagePosition and again set it to the window offset 250 pixels (const
 pagePosition = window.pageYOffset=250). Then, I'm going to set the
@@ -5962,6 +6008,7 @@ for each. And having to run a function here.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 341. function resetpageposition (179) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image341.png"
+  loading="lazy"
   title="function resetPagePosition"
   alt="function resetPagePosition."
   style="width:50%" />
@@ -6009,13 +6056,14 @@ some comments, I don't know.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 342/343. script.js lines 18-37, 22-41 (180) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image347.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
   title="script.js - 18-37"
   alt="script.js - 18-37." />
 <img class="border"
   src="./images/image348.png"
+  loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Scription Site"
   title="script.js - 22-41"
   alt="script.js - 22-41." />
 <p style="clear: both;"></p>
