--- a/index.html
+++ b/index.html
@@ -74,12 +74,15 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/W04DM/pdf-of-presentation" 
-    target="_blank" rel="noreferrer noopener"><strong>1.04 jQueryPlugins.pdf (PDF File)</strong></a></p></li>
-  <li><p><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider" 
-    target="_blank" rel="noopener noreferrer"><strong>1.04 FlexSliderBasic-START.zip (ZIP File)</strong></a></p></li>
-  <li><p><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider"
-    target="_blank" rel="noopener noreferrer"><strong>1.04 FlexSliderPlugin.zip (ZIP File)</strong></a></p></li>
+  <li><p><a href="./pdf/1.04-jQuery-Plugins.zip" 
+    target="_blank" rel="noreferrer noopener"><strong>
+	1.04 jQueryPlugins.pdf (PDF File)</strong></a></p></li>
+  <li><p><a href="./zip_code/1.04-FlexSliderBasic-START.zip" 
+    target="_blank" rel="noopener noreferrer"><strong>
+	1.04 FlexSliderBasic-START.zip (ZIP File)</strong></a></p></li>
+  <li><p><a href="./zip_code/1.04-FlexSliderPlugin.zip" 
+    target="_blank" rel="noopener noreferrer">
+	<strong>1..04 FlexSliderPlugin.zip (ZIP File)</strong></a></p></li>
 </ul>
 
 <blockquote>
@@ -94,7 +97,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Hv9Tf/pdf-of-presentation"
+  <li><a href="./pdf/1.12-FlexSlider.pdf" 
     target="_blank" rel="noreferrer noopener">
     <strong>1.12 FlexSlider.pdf</strong></a></li>
 </ul>
@@ -107,8 +110,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/ClQ79/start-files-smooth-scroll-with-jquery">
-  <strong>2.02 jQueryScrollEffects-START.zip</strong></a></li>
+  <li><a href="./zip_code/2.02-jQuery-ScrollEffects.zip 
+    target="_blank" rel="noopener noreferrer">
+    <strong>2.02 jQueryScrollEffects-START.zip</strong></a></li>
 </ul>
 
 <blockquote>
@@ -130,7 +134,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation"
+  <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
     target="_blank" rel="noreferrer noopener">
     <strong>2.17 jQueryPageLocationTracking.pdf</strong></a></li>
 </ul>
@@ -140,7 +144,8 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-JavaScript-jquery/supplement/tJhzN/start-files-smooth-scroll-with-JavaScript">
+  <li><a href="./zip_code/2.18-ScrollEffects-START.zip" 
+    target="_blank" rel="noreferrer noopener">
     <strong>2.18 ScrollEffects-START.zip</strong></a></li>
 </ul>
 
@@ -158,9 +163,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0lQmf/pdf-of-presentation"
+  <li><a href=".pdf/2.28-Scription-shit.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.28 PDF-of-Presentation.pdf</strong></a></li>
+    <strong>2.28 Scription shit.pdf</strong></a></li>
 </ul>
 
 <blockquote>
@@ -168,7 +173,8 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/KrJDR/start-files-scription-site">
+  <li><a href=".zip_code/2.29-ScriptionSite.zip" 
+    target="_blank" rel="noreferrer noopener">
     <strong>2.29 Scription Site.zip</strong></a></li>
 </ul>
 
