--- a/index.html
+++ b/index.html
@@ -417,11 +417,14 @@ series of challenges.</p>
 <ul>
   <li>zip_files:
     <ul>
-      <li>2.29 Scription-Part1-START.zip</li>
-      <li>2.29 Scription-Part1-Snippets.zip</li>
-      <li>2.29 Scription-Part2-START.zip</li>
-      <li>2.29 Scription-Part2-Snippets.zip</li>
-      <li>2.29 Flexslider-files.zip</li>
+      <li><a href="./zip_files/2.29-Scription-Part1-START.zip">
+	    2.29 Scription Part 1 START (zip)</a></li>
+      <li><a href="./zip_files/2.29-Scription-Part2-START.zip">
+	    2.29 Scription Part 2 START (zip)</a></li>
+      <li><a href="2.29 Scription-Part1-Snippets.zip">
+	    2.29 Scription Part 1 Snippets (zip)</a></li>
+      <li><a href="2.29 Scription-Part2-Snippets.zip">
+	    2.29 Scription Part 2 Snippets (zip)</a></li>
     </ul>
   </li>
 </ul>
@@ -985,8 +988,9 @@ for a future as a JavaScript developer.</p>
 <h4>jQuery Plugins PDF</h4>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/W04DM/pdf-of-presentation" 
-    target="_blank" rel="noreferrer noopener">1.05.jQueryPlugins.pdf (PDF File)</a></li>
+  <li><a href="./pdfs/1.05-jQuery-Plugins.pdf" 
+    target="_blank" rel="noreferrer noopener">
+	1.05 jQuery Plugins (pdf)</a></li>
 </ul>
 
 <p>Attached is a zip file of the things you need to begin this exercise.
@@ -997,11 +1001,13 @@ carrying the extension .ZIP.</p>
 <h4>START Files: FlexSlider &amp; jQuery Plugins</h4>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider" 
-    target="_blank" rel="noopener noreferrer">1.05.FlexSliderBasic-START.zip (ZIP File)</a>
+  <li><a href="./zip_files/1.05-FlexSliderBasic-START.zip" 
+    target="_blank" rel="noopener noreferrer">
+	1.05 FlexSlider Basic START (zip)</a>
   </li>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ulu2D/start-files-jquery-plugins-flexslider"
-    target="_blank" rel="noopener noreferrer">1.05.FlexSliderPlugin.zip (ZIP File)</a>
+  <li><a href="./zip_files/1.05-FlexSliderPlugin.zip"
+    target="_blank" rel="noopener noreferrer">
+	1.05 FlexSlider Plugin (zip)</a>
   </li>
 </ul>
 
@@ -2724,7 +2730,9 @@ one or more files that are compressed for storage or transmission, often
 carrying the extension .ZIP.</p>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/ClQ79/start-files-smooth-scroll-with-jquery" target="_blank" rel="noopener noreferrer">2.02.jQueryScrollEffects-START.zip (ZIP File)</a></li>
+  <li><a href="./zip_files/2.18-ScrollEffects-START.zip" 
+    target="_blank" rel="noopener noreferrer">
+    2.02 jQuery Scroll Effects START (zip)</a></li>
 </ul>
 
 <h3>Additional Resource:</h3>
