--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><a href="./pdf/1.04-jQuery-Plugins.zip" 
-    target="_blank" rel="noreferrer noopener"><strong>
-	1.04 jQueryPlugins.pdf (PDF File)</strong></a></p></li>
-  <li><p><a href="./zip_code/1.04-FlexSliderBasic-START.zip" 
-    target="_blank" rel="noopener noreferrer"><strong>
-	1.04 FlexSliderBasic-START.zip (ZIP File)</strong></a></p></li>
-  <li><p><a href="./zip_code/1.04-FlexSliderPlugin.zip" 
+  <li><p><a href="./pdfs/1.04-jQuery-Plugins.pdf" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>1.04 jQuery Plugins (pdf)</strong></a></p></li>
+  <li><p><a href="./zips/1.04-FlexSliderBasic-START.zip" 
     target="_blank" rel="noopener noreferrer">
-	<strong>1..04 FlexSliderPlugin.zip (ZIP File)</strong></a></p></li>
+	<strong>1.04 FlexSlider Basic START (zip)</strong></a></p></li>
+  <li><p><a href="./zips/1.04-FlexSlider-Plugin.zip" 
+    target="_blank" rel="noopener noreferrer">
+	<strong>1.04 FlexSlider Plugin (zip)</strong></a></p></li>
 </ul>
 
 <blockquote>
@@ -97,9 +97,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./pdf/1.12-FlexSlider.pdf" 
+  <li><a href="./pdfs/1.12-jQuery-FlexSliderPlugin.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>1.12 FlexSlider.pdf</strong></a></li>
+    <strong>1.12 jQuery FlexSlider Plugin (pdf)</strong></a></li>
 </ul>
 
 <h3><strong>Week 2: Combining Scripts and Skill Building Through Practice</strong></h3>
@@ -110,9 +110,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./zip_code/2.02-jQuery-ScrollEffects.zip 
+  <li><a href="./zips/2.02-jQuery-ScrollEffects-START.zip 
     target="_blank" rel="noopener noreferrer">
-    <strong>2.02 jQueryScrollEffects-START.zip</strong></a></li>
+    <strong>2.02 jQuery Scroll Effects START (zip)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -134,9 +134,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
+  <li><a href="./pdfs/2.17-jQuery-PageLocationTracking.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.17 jQueryPageLocationTracking.pdf</strong></a></li>
+    <strong>2.17 jQuery Page Location Tracking (pdf)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -144,9 +144,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./zip_code/2.18-ScrollEffects-START.zip" 
+  <li><a href="./zips/2.18-ScrollEffects-START.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.18 ScrollEffects-START.zip</strong></a></li>
+    <strong>2.18 JS Scroll Effects START (zip)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -159,13 +159,13 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <h4><a href="#ch2-25"><strong>2.25 The Magic Conditionals</strong></a></h4>
   <h4><a href="#ch2-26"><strong>2.26 Changing the Next Link</strong></a></h4>
   <h4><a href="#ch2-27"><strong>2.27 Resizing Function</strong></a></h4>
-  <h4><a href="#ch2-28"><strong>2.28 Finalzing the Script</strong></a></h4>
+  <h4><a href="#ch2-28"><strong>2.28 Finalizing the Script</strong></a></h4>
 </blockquote>
 
 <ul>
-  <li><a href=".pdf/2.28-Scription-shit.pdf" 
+  <li><a href="./pdfs/2.28-JS-ScrollEffects.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.28 Scription shit.pdf</strong></a></li>
+    <strong>2.28 JS Scroll Effects (pdf)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -173,17 +173,27 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href=".zip_code/2.29-ScriptionSite.zip" 
+  <li><a href=".zips/2.29-ScriptionSite.zip" 
     target="_blank" rel="noreferrer noopener">
     <strong>2.29 Scription Site.zip</strong></a></li>
 </ul>
 
 <ul>
-  <li><p><strong>2.29 Scription-Part1-START.zip</strong></p></li>
-  <li><p><strong>2.29 Scription-Part1-Snippets.zip</strong></p></li>
-  <li><p><strong>2.29 Scription-Part2-START.zip</strong></p></li>
-  <li><p><strong>2.29 Scription-Part2-Snippets.zip</strong></p></li>
-  <li><p><strong>2.29 Flexslider-files.zip</strong></p></li>
+  <li><p><a href="./zips/2.29-ScriptionPart1-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>2.29 Scription Part 1 START (zip)</strong></p></li>
+  <li><p><a href="./zips/2.29-ScriptionPart1-Snippets.zip" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>2.29 Scription Part 1 Snippets (zip)</strong></p></li>
+  <li><p><a href="./zips/2.29-ScriptionPart2-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>2.29 Scription Part 2 START (zip)</strong></p></li>
+  <li><p><a href="./zips/2.29-ScriptionPart2-Snippets.zip" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>2.29 Scription Part 2 Snippets (zip)</strong></p></li>
+  <li><p><a href="./zips/2.29-FlexSliderFiles-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>2.29 FlexSlider Files (zip)</strong></p></li>
 </ul>
 
 <blockquote>
@@ -200,8 +210,12 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><strong>2.39 Scription-Finished-Version.pdf</strong></p></li>
-  <li><p><strong>2.39 PDF-of-Presentations.pdf</strong></p></li>
+  <li><p><a href="./pdfs/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</strong></p></li>
+  <li><p><a href="./pdfs/2.39 ScriptionSitePart2-InteractionChallenges.pdf" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>2.39 Scription Site Part 2 Interchange Challenges (pdf)</strong></p></li>
 </ul>
 
 <h3><strong>Week 3. Intro to Objects and Data in JavaScript</strong></h3>
@@ -212,7 +226,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><strong>3.02 START-Files-Working-with-Objects-in-JavaScript.pdf</strong></li>
+  <li><a href="./zips/3.02-JS-Objects-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>3.02 JS Objects START (zip)</strong></li>
 </ul>
 
 <blockquote>
@@ -226,13 +242,20 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><strong>3.07 PDF-of-Presentations.pdf</strong></li>
 </ul>
+<ul>
+  <li><a href="./pdfs/3.07-JS-Objects-Data.pdf" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>3.07 JS Objects &amp; Data (pdf)</strong></li>
+</ul>
 
 <blockquote>
   <h4><a href="#ch3-08"><strong>3.08 Intro to Pig Dice Game</strong></a></h4>
 </blockquote>
 
 <ul>
-  <li><strong>3.08-Pig-Dice-Game-Diagrams.pdf</strong></li>
+  <li><a href="./pdfs/3.08-PigDiceGame-Diagrams.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>3.08 Pig Dice Game Diagrams (pdf)</strong></li>
 </ul>
 
 <blockquote>
@@ -242,7 +265,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><strong>3.11 PDF-of-Presentations.pdf</strong></li>
+  <li><strong>3.11 IntrotoPigDiceGame.pdf</strong></li>
 </ul>
 
 <h3><strong>Week 4. Building a Simple Game in JavaScript</strong></h3>
@@ -253,7 +276,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><strong>4.02 START-Files-Game-of-Pig.pdf</strong></li>
+  <li><a href="4.02-GameofPig-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>4.02 Game of Pig START (zip)</strong></li>
 </ul>
 
 <blockquote>
@@ -272,7 +297,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><strong>4.14 PDF-of-Presentation.pdf</strong></li>
+  <li><a href="4.14-GameofPig.pdf" 
+    target="_blank" rel="noreferrer noopener"> 
+    <strong>4.14 Game of Pig (pdf)</strong></li>
 </ul>
 
 <blockquote>
@@ -11634,6 +11661,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Last Updated 3/24/2024 5+ pm</h6>
 <h6>Last Updated 3/30/2024 3+ pm</h6>
 <h6>Last Updated 4/25/2024 11+ pm</h6>
+<h6>Last Updated 5/5/2024 4+ pm</h6>
 
 </body>
 </html>
