--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </ul>
 
 <blockquote>
-  <h4><a href="#ch1-06"><strong>1.05 FlexSlider: A jQuery Plugin</strong></a></h4>
-  <h4><a href="#ch1-07"><strong>1.06 About the Minified Version</strong></a></h4>
-  <h4><a href="#ch1-08"><strong>1.07 Adding Markup &amp; Hooking Up the Slider</strong></a></h4>
-  <h4><a href="#ch1-09"><strong>1.08 FlexSlider Rules</strong></a></h4>
-  <h4><a href="#ch1-10"><strong>1.09 Additional Controls</strong></a></h4>
-  <h4><a href="#ch1-11"><strong>1.10 Advanced FlexSlider</strong></a></h4>
-  <h4><a href="#ch1-12"><strong>1.11 Additional Styling</strong></a></h4>
-  <h4><a href="#ch1-13"><strong>1.12 Styling the CTA</strong></a></h4>
+  <h4><a href="#ch1-05"><strong>1.05 FlexSlider: A jQuery Plugin</strong></a></h4>
+  <h4><a href="#ch1-06"><strong>1.06 About the Minified Version</strong></a></h4>
+  <h4><a href="#ch1-07"><strong>1.07 Adding Markup &amp; Hooking Up the Slider</strong></a></h4>
+  <h4><a href="#ch1-08"><strong>1.08 FlexSlider Rules</strong></a></h4>
+  <h4><a href="#ch1-09"><strong>1.09 Additional Controls</strong></a></h4>
+  <h4><a href="#ch1-10"><strong>1.10 Advanced FlexSlider</strong></a></h4>
+  <h4><a href="#ch1-11"><strong>1.11 Additional Styling</strong></a></h4>
+  <h4><a href="#ch1-12"><strong>1.12 Styling the CTA</strong></a></h4>
 </blockquote>
 
 <ul>
@@ -323,10 +323,10 @@ image sliders.</p>
 
 <ul>
   <li>1.00 A Note from UC Davis</li>
+  <li>1.00 Welcome to this Course!</li>
 </ul>
 
 <ol type="1">
-  <li>Welcome to this Course!</li>
   <li>Module Introduction</li>
   <li>Introduction to jQuery Plugins</li>
   <li>Using Plugins and Essential Steps</li>
@@ -334,9 +334,15 @@ image sliders.</p>
 </ol>
 
 <ul>
-  <li>1.05 jQueryPlugins.pdf</li>
-  <li>1.05 FlexSliderBasic-START.zip</li>
-  <li>1.05 FlexSliderPlugin.zip</li>
+  <li><p><a href="./pdfs/1.04-jQuery-Plugins.pdf" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>1.04 jQuery Plugins (pdf)</strong></a></p></li>
+  <li><p><a href="./zips/1.04-FlexSliderBasic-START.zip" 
+    target="_blank" rel="noopener noreferrer">
+	<strong>1.04 FlexSlider Basic START (zip)</strong></a></p></li>
+  <li><p><a href="./zips/1.04-FlexSlider-Plugin.zip" 
+    target="_blank" rel="noopener noreferrer">
+	<strong>1.04 FlexSlider Plugin (zip)</strong></a></p></li>
 </ul>
 
 <ol start="6" type="1">
@@ -351,7 +357,9 @@ image sliders.</p>
 </ol>
 
 <ul>
-  <li>1.13 FlexSlider.pdf</li>
+  <li><p><a href="./pdfs/1.12-jQuery-FlexSliderPlugin.pdf" 
+    target="_blank" rel="noopener noreferrer">
+    <strong>1.12 jQuery FlexSlider Plugin (pdf)</strong></a></p></li>
 </ul>
 
 <h3>Module (Week) Two:</h3>
@@ -377,8 +385,9 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/ClQ79/start-files-smooth-scroll-with-jquery" target="_blank" rel="noopener noreferrer">
-    2.02 jQueryScrollEffects-START.zip (ZIP File)</a></li>
+  <li><p><a href="./zips/2.02-jQuery-ScrollEffects-START.zip" 
+    target="_blank" rel="noopener noreferrer">
+    2.02 jQuery Scroll Effects START (zip)</a></p></li>
 </ul>
 
 <ol start="3" type="1">
@@ -389,9 +398,9 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/eRvCI/pdf-of-presentation"
+  <li><a href="./pdfs/2.06-jQuery-SmoothScroll.pdf" 
     target="_blank" rel="noreferrer noopener">
-    PDF of Presentation: 2.06 jQuerySmoothScroll.pdf</a></li>
+    2.06 jQuery Smoother Scroll Effects (pdf)</a></li>
 </ul>
 
 <ol start="7" type="1">
@@ -408,8 +417,11 @@ series of challenges.</p>
   <li>Reviewing the Whole Script (5:48)</li>
 </ol>
 
+<!-- 10 minute read -->
 <ul>
-  <li>2.17 jQueryPageLocationTracking.pdf (10 min’s)</li>
+  <li><a href="./pdfs/2.17-jQuery-PageLocationTracking.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    2.17 jQuery Page Location Tracking (pdf)</li>
 </ul>
 
 <ol start="18" type="1">
@@ -417,7 +429,9 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li>2.18 ScrollEffects-START.zip</li>
+  <li><a href="./zips/2.18-JS-ScrollEffects-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    2.18 Scroll Effects START (zip)</li>
 </ul>
 
 <ol start="19" type="1">
@@ -434,7 +448,9 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li>2.28 PDF of Presentation (10 min’s)</li>
+  <li><a href="./pdfs/2.28-JS-ScrollEffects.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    2.28 JS Scroll Effects (pdf)</li>
 </ul>
 
 <ol start="29" type="1">
@@ -442,18 +458,18 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li>zip_files:
-    <ul>
-      <li><a href="./zip_files/2.29-Scription-Part1-START.zip">
-	    2.29 Scription Part 1 START (zip)</a></li>
-      <li><a href="./zip_files/2.29-Scription-Part2-START.zip">
-	    2.29 Scription Part 2 START (zip)</a></li>
-      <li><a href="2.29 Scription-Part1-Snippets.zip">
-	    2.29 Scription Part 1 Snippets (zip)</a></li>
-      <li><a href="2.29 Scription-Part2-Snippets.zip">
-	    2.29 Scription Part 2 Snippets (zip)</a></li>
-    </ul>
-  </li>
+  <li><a href="./zip_files/2.29-Scription-Part1-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+	2.29 Scription Part 1 START (zip)</a></li>
+  <li><a href="./zip_files/2.29-Scription-Part2-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    2.29 Scription Part 2 START (zip)</a></li>
+  <li><a href="2.29 Scription-Part1-Snippets.zip" 
+    target="_blank" rel="noreferrer noopener">
+    2.29 Scription Part 1 Snippets (zip)</a></li>
+  <li><a href="2.29 Scription-Part2-Snippets.zip" 
+    target="_blank" rel="noreferrer noopener">
+	2.29 Scription Part 2 Snippets (zip)</a></li>
 </ul>
 
 <ol start="30" type="1">
@@ -470,7 +486,9 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li>2.39 Scription Finished Version</li>
+  <li><a href="2.39-ScriptionSitePart1-HTML-CSS.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    2.39 Scription Site Part 1 HTML &amp; CSS</a></li>
   <li>2.39 PDF of Presentations</li>
 </ul>
 
