--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="4.02-GameofPig-START.zip" 
+  <li><a href="./zips/4.02-GameofPig-START.zip" 
     target="_blank" rel="noreferrer noopener">
     <strong>4.02 Game of Pig START (zip)</strong></li>
 </ul>
@@ -297,7 +297,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="4.14-GameofPig.pdf" 
+  <li><a href="./pdfs/4.14-GameofPig.pdf" 
     target="_blank" rel="noreferrer noopener"> 
     <strong>4.14 Game of Pig (pdf)</strong></li>
 </ul>
@@ -458,16 +458,16 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="./zip_files/2.29-Scription-Part1-START.zip" 
+  <li><a href="./zips/2.29-ScriptionPart1-START.zip" 
     target="_blank" rel="noreferrer noopener">
 	2.29 Scription Part 1 START (zip)</a></li>
-  <li><a href="./zip_files/2.29-Scription-Part2-START.zip" 
+  <li><a href="./zips/2.29-ScriptionPart2-START.zip" 
     target="_blank" rel="noreferrer noopener">
     2.29 Scription Part 2 START (zip)</a></li>
-  <li><a href="2.29 Scription-Part1-Snippets.zip" 
+  <li><a href="./zips/2.29 ScriptionPart1-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
     2.29 Scription Part 1 Snippets (zip)</a></li>
-  <li><a href="2.29 Scription-Part2-Snippets.zip" 
+  <li><a href="./zips/2.29 ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
 	2.29 Scription Part 2 Snippets (zip)</a></li>
 </ul>
@@ -486,7 +486,7 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><a href="2.39-ScriptionSitePart1-HTML-CSS.pdf" 
+  <li><a href="./pdfs/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 1 HTML &amp; CSS</a></li>
   <li>2.39 PDF of Presentations</li>
