--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./zips/2.02-jQuery-ScrollEffects-START.zip 
+  <li><a href="./zips/2.02-jQuery-ScrollEffects-START.zip" 
     target="_blank" rel="noopener noreferrer">
     <strong>2.02 jQuery Scroll Effects START (zip)</strong></a></li>
 </ul>
@@ -181,19 +181,19 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><p><a href="./zips/2.29-ScriptionPart1-START.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.29 Scription Part 1 START (zip)</strong></p></li>
+    <strong>2.29 Scription Part 1 START (zip)</strong></a></p></li>
   <li><p><a href="./zips/2.29-ScriptionPart1-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.29 Scription Part 1 Snippets (zip)</strong></p></li>
+    <strong>2.29 Scription Part 1 Snippets (zip)</strong></a></p></li>
   <li><p><a href="./zips/2.29-ScriptionPart2-START.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.29 Scription Part 2 START (zip)</strong></p></li>
+    <strong>2.29 Scription Part 2 START (zip)</strong></a></p></li>
   <li><p><a href="./zips/2.29-ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
-	<strong>2.29 Scription Part 2 Snippets (zip)</strong></p></li>
+    <strong>2.29 Scription Part 2 Snippets (zip)</strong></p></li>
   <li><p><a href="./zips/2.29-FlexSliderFiles-START.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.29 FlexSlider Files (zip)</strong></p></li>
+    <strong>2.29 FlexSlider Files (zip)</strong></a></p></li>
 </ul>
 
 <blockquote>
